tests/fixtures/invalid/invalid_identifier.cyl
// Invalid identifier
fn 123invalid() {
}
